--- a/nginx-palybook.yaml
+++ b/nginx-palybook.yaml
@@ -1,6 +1,5 @@
 - name: install nginx
-  hosts: local
-  connection: local 
+  hosts: web  
   become: yes
   tasks:
   - name: installing nginx web server
