--- a/01-vars.yaml
+++ b/01-vars.yaml
@@ -8,4 +8,4 @@
   tasks:
   - name: print variable
     ansible.builtin.debug:
-      msg: " course is {{COURSE:}} , duration is {{DURATION:}} ,, mentoer is {{MENTOR}}"
+      msg: " course is {{COURSE}} , duration is {{DURATION}} ,, mentoer is {{MENTOR}}"
