--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,9 @@
+[localhost]
+127.0.0.1
 
-[local:vars]
-COURSE ="Ansible from inventory"
-NAME ="Ansible from inventory"
+[localhost:vars]
+COURSE="Ansible from inventory"
+NAME="Ansible from inventory"
 
 
 
