--- a/06-datatypes.yaml
+++ b/06-datatypes.yaml
@@ -1,5 +1,5 @@
 - name: demo on data types
-  hosts: local
+  hosts: localhost
   connection: local
   vars:
     PROGRAM: "DevSecOps with AWS" # string
