--- a/09-fact-conditions.yaml
+++ b/09-fact-conditions.yaml
@@ -5,5 +5,13 @@
   - name: facts 
     ansible.builtin.debug:
       msg: "{{ansible_facts}}"
-      
-    
+
+  - name: check redhat or not 
+    ansible.builtin.debug:
+      msg: "os family is redhat ""
+    when: ansible_facts.os_family == "RedHat"
+  
+  - name: check debian  or not 
+    ansible.builtin.debug:
+      msg: "os family is debain  "
+    when: ansible_facts.os_family == "Debian"
