--- a/09-fact-conditions.yaml
+++ b/09-fact-conditions.yaml
@@ -8,7 +8,7 @@
 
   - name: check redhat or not 
     ansible.builtin.debug:
-      msg: "os family is redhat ""
+      msg: "os family is redhat "
     when: ansible_facts.os_family == "RedHat"
   
   - name: check debian  or not 
