--- a/10-shell-command.yaml
+++ b/10-shell-command.yaml
@@ -6,9 +6,9 @@
   - name: command module
     #ansible.builtin.command: cat /etc/passwd | grep root
     ansible.builtin.shell: cat /etc/passwd | grep root
-    regester: root_output
+    register: root_output
 
   - name : printing root_output
     ansible.builtin.debug:
-      msg : "{{root_output}}"
+      msg: "{{root_output}}"
   
