--- a/12-install-loops.yaml
+++ b/12-install-loops.yaml
@@ -3,7 +3,7 @@
   connection: local
   tasks:
   - name : loops 
-    ansible.builtin.packages:
+    ansible.builtin.package:
       name: "{{item}}"
       state: present
     loop:
