--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -1,6 +1,6 @@
 
 - name: demo on filters
-  hosts: local
+  hosts: localhost
   connection: local
   vars:
     topics: linux, shell, ansible, terraform
