--- a/15-errorhandling.yaml
+++ b/15-errorhandling.yaml
@@ -6,7 +6,11 @@
     ansible.builtin.command: id catalogue
     register: user_output
     ignore_errors: true
+
   - name : printing the user_output
     ansible.builtin.debug:
-      msg: "{{user_output}}" 
-    
+      msg: "{{user_output}}"
+
+  - name : create user
+    ansible.builtin.command: useradd catalogue
+    when: user_output.rc != 0 
