--- a/15-errorhandling.yaml
+++ b/15-errorhandling.yaml
@@ -1,6 +1,7 @@
 - name : error handling
   hosts: localhost
   connection: local
+  become: yes
   tasks:
   - name: check user exits or not 
     ansible.builtin.command: id catalogue
